--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,7 @@
-beautifulsoup4==4.5.3
-chardet==2.3.0
-flup==1.0.2
-html5lib==0.999999999
+Click==7.0
+Flask==1.0.3
+flup==1.0.3
+itsdangerous==1.1.0
 Jinja2==2.10.1
-lxml==3.7.1
-MarkupSafe==1.0
-paho-mqtt==1.3.1
-RPi.GPIO==0.6.3
-rrdtool==0.1.14
-six==1.10.0
-spidev==3.2
-web.py==0.39
-webencodings==0.5
+MarkupSafe==1.1.1
+Werkzeug==0.15.4
