--- a/wsgi_server/lighttpd.conf
+++ b/wsgi_server/lighttpd.conf
@@ -24,16 +24,17 @@ fastcgi.debug = 1
 fastcgi.server = ("/app.py" => 
 	(("socket" => "/tmp/data-logger-fcgi.sock",
 	  "check-local" => "disable",
-	  "bin-path" => "/var/www/data-logger/data-logger/app.py",
+	  "bin-path" => "/var/www/data-logger/data_logger/__init__.py",
 	  "max-procs" => 1,
 	  "bin-environment" => (
-	  	"REAL_SCRIPT_NAME" => ""
+	  	"REAL_SCRIPT_NAME" => "",
+      "PYTHONPATH" => "$PYTHONPATH:/var/www/data-logger"
 	  )
 	 ))
 )
 
 
 url.rewrite-once = (
-	"^/static/(.*)$" => "/data-logger/static/$1",
+	"^/static/(.*)$" => "/data_logger/static/$1",
 	"^/(.*)$" => "/app.py"
 )
