--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ install:
   pip install -r requirements.txt
   PYTHONPATH=$PYTHONPATH:$(pwd)
 script:
-  pytest tests/db/*
+  pytest tests/test_travis.py
