--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ cache: pip
 python:
   - "3.6"
 install:
-  pip install -r requirements.txt
-  PYTHONPATH=$PYTHONPATH:$(pwd)
+  - pip install -r requirements.txt
+  - PYTHONPATH=$PYTHONPATH:$(pwd)
 script:
   pytest tests/test_travis.py
