--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,5 @@ install:
   - pip install -r requirements.txt
   - PYTHONPATH=$PYTHONPATH:$(pwd)
 script:
-  pytest tests/test_travis.py
+  - pytest tests/*
+  - pytest tests/db/*
