--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,14 @@ language: python
 cache: pip
 python:
   - "3.6"
+env:
+  - MOZ_HEADLESS=1 PYTHONPATH=$PYTHONPATH:$(pwd)
+addons:
+  firefox: latest
 install:
   - pip install -r requirements.txt
-  - PYTHONPATH=$PYTHONPATH:$(pwd)
+  - wget https://github.com/mozilla/geckodriver/releases/download/v0.24.0/geckodriver-v0.24.0-linux64.tar.gz
+  - tar xzvf geckodriver-v0.24.0-linux64.tar.gz
 script:
   - pytest tests/*
   - pytest tests/db/*
