switch to postgresql dbms

--- a/data_logger/config.json
+++ b/data_logger/config.json
@@ -1,4 +1,4 @@
 {
-  "SQLALCHEMY_DATABASE_URI": "sqlite:///data-logger.db",
+  "SQLALCHEMY_DATABASE_URI": "postgresql+psycopg2://postgres:sql@127.0.0.1:5432/test",
   "SQLALCHEMY_TRACK_MODIFICATIONS": false
 }
