--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,6 @@ install:
   - wget https://github.com/mozilla/geckodriver/releases/download/v0.24.0/geckodriver-v0.24.0-linux64.tar.gz
   - tar xzvf geckodriver-v0.24.0-linux64.tar.gz
 script:
-  - pytest tests/*
   - pytest tests/db/*
+  - lighttpd -f wsgi_server/lighttpd.conf -D &
+  - pytest tests/*
