--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ install:
   - pip install -r requirements.txt
   - wget https://github.com/mozilla/geckodriver/releases/download/v0.24.0/geckodriver-v0.24.0-linux64.tar.gz
   - tar xzvf geckodriver-v0.24.0-linux64.tar.gz
-  - apk add lighttpd
+  - apt-get install lighttpd
 script:
   - pytest tests/db/*
   - lighttpd -f wsgi_server/lighttpd.conf -D &
