--- a/wsgi_server/lighttpd.conf
+++ b/wsgi_server/lighttpd.conf
@@ -1,7 +1,7 @@
 server.modules += ("mod_fastcgi")
 server.modules += ("mod_rewrite")
 
-server.document-root = "/var/www/data-logger/"
+server.document-root = env.ROOT
 
 mimetype.assign = (
 	".html" => "text/html",
@@ -24,7 +24,7 @@ fastcgi.debug = 1
 fastcgi.server = ("/app.py" => 
 	(("socket" => "/tmp/data-logger-fcgi.sock",
 	  "check-local" => "disable",
-	  "bin-path" => "/var/www/data-logger/data_logger/__init__.py",
+	  "bin-path" => env.ROOT + "/data_logger/__init__.py",
 	  "max-procs" => 1,
 	  "bin-environment" => (
 	  	"REAL_SCRIPT_NAME" => "",
